# prettyprompt

./: README.md  pyproject.toml
prettyprompt/: __init__.py  cleaners.py  converters.py  sniffers.py
tests/: test_cleaners.py  test_converters.py  test_sniffers.py
