[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prettyprompt"
authors = [{name = "Tom Dyson", email = "tom@torchbox.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "beautifulsoup4",
    "sqlparse",
]

[project.urls]
Home = "https://github.com/tomdyson/prettyprompt"
